samples/_failures_safe/1761005893_d8a014_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab966600.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ab966600.c:164:20: error: expected ‘;’ at end of input
  164 |         token_count
      |                    ^
      |                    ;
./samples/SAFE/__tmp_ab966600.c:164:9: error: expected declaration or statement at end of input
  164 |         token_count
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_ab966600.c:164:9: error: expected declaration or statement at end of input
